# advent-of-code

./: .gitignore  .gitlab-ci.yml  .gitpod.yml  .pre-commit-config.yaml  LICENSE  README.md  bandit.yaml  devfile.yaml  justfile  mypy.ini  puzzles.py  pylintrc  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yaml
.zed/: tasks.json
2022/: README.md
2022/day1/: calories.py
2022/day2/: README.md  rock_paper_scissors.py  rules.py
2022/day3/: README.md  models.py  rucksacks.py  utils.py
2022/day4/: cleanup.py
advent_2022/: README.md  puzzles.py
advent_2022/day1/: calories.py
advent_2022/day2/: __init__.py  rock_paper_scissors.py
advent_2022/day3/: __init__.py  models.py  rucksacks.py
advent_2022/day4/: README.md  cleanup.py
advent_2022/day5/: README.md  __init__.py  models.py  stacks.py
advent_2022/day6/: README.md  models.py  tuner.py
advent_2022/day7/: README.md  __init__.py  diskspace.py
advent_2022/day8/: __init__.py  models.py
advent_2022/utils/: __init__.py
advent_of_code/: README.md  version.py
advent_of_code/day1/: __init__.py
advent_of_code/day10/: README.md  __init__.py  models.py  screen.py
advent_of_code/day11/: README.md  __init__.py  models.py  monkey.py
advent_of_code/day12/: README.md  __init__.py  hiking.py  models.py
advent_of_code/day3/: rucksacks.py
advent_of_code/day4/: __init__.py  cleanup.py  models.py
advent_of_code/day5/: README.md  stacks.py
day1/: README.md
templates/: cookiecutter.json
utils/: grouper.py  iter.py  vector.py
(+48 files in other folders)
