[project]
name = "aoc"
version = "2025"
description = "Advent of Code solutions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff",
    "ruff-lsp",
    "pyupgrade",
    "pre-commit",
    "cookiecutter",
    "pytest",
]

[tool.uv]
package = false

[tool.pyright]
typeCheckingMode = "off"

[tool.pytest.ini_options]
addopts = "--ignore=templates/"

[tool.bandit]
# Configuration for bandit security checking tool
exclude_dirs = [
    "templates/",
    "**/test*.py"
]
