[project]
name = "aoc"
version = "2025"
description = "Advent of Code solutions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff==0.14.7",
    "pyupgrade",
    "pre-commit",
    "pre-commit-uv",
    "cookiecutter",
    "pytest",
]

[tool.uv]
package = false

[tool.pyright]
typeCheckingMode = "off"

[tool.pytest.ini_options]
addopts = "--ignore=templates/"
